<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Registration">

    <!-- TODO: Update blank fragment layout -->

        <RelativeLayout
            android:id="@+id/officerLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <EditText
                android:id="@+id/officerName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/officer_name"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:layout_marginStart="30dp" />
            <EditText
                android:id="@+id/email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:layout_below="@id/officerName"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:layout_marginStart="30dp" />

            <EditText
                android:id="@+id/officerPasswordRegister"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/officer_password"
                android:gravity="center"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:layout_below="@id/email"
                android:layout_marginLeft="30dp"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:layout_marginStart="30dp" />
            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:gravity="center"
                android:inputType="textPassword"
                android:layout_marginLeft="30dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:layout_below="@id/officerPasswordRegister"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:layout_marginStart="30dp" />
            <Button
                android:id="@+id/registerButton"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:background="@drawable/auth"
                android:layout_below="@id/confirmPassword"
                android:gravity="center"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="80dp"
                android:layout_marginBottom="30dp"
                android:text="@string/register"/>


        </RelativeLayout>





</FrameLayout>